tests/expectations/compiler/constructor/two_constructors_fail.out
Error [EPAR0370047]: A program can only have one constructor.
    --> compiler-test:9:5
     |
   9 |     @custom
     |     ^^^^^^^
  10 |     constructor() {
     |     ^^^^^^^^^^^^^^^
  11 |         assert_eq(true, true);
     |         ^^^^^^^^^^^^^^^^^^^^^^
  12 |     }
     |     ^
